gitops/services-springboot.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
  name: springboot-svc
  namespace: springboot-mandiri
spec:
  ports:
    - name: springboot-svc
      port: 3000
      targetPort: 8080
      protocol: TCP
  selector:
    app: gilang-springboot
